changed view profile button to hunt details, fixed invisible hunt details button in dark mode, and aligned it with bottom left corner of ended hunt card

--- a/client/src/app/endedHunts/ended-hunt-card.component.scss
+++ b/client/src/app/endedHunts/ended-hunt-card.component.scss
@@ -28,6 +28,18 @@
   }
 }
 
+.profile-button {
+  position: absolute;
+  bottom: 10px;
+  left: 30px;
+  background-color: #0056b3;
+  @media (prefers-color-scheme: dark) {
+    background-color: #00ccff;
+  }
+}
+
+
+
 .remove-hunt-fab {
   position:absolute;
   bottom: 20px;
